--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "next": "14.2.20",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive-masonry": "^2.6.0",
     "react-slick": "^0.30.2",
     "sass": "^1.82.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/node": "^20",
