--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mui/material": "^6.2.0",
     "next": "14.2.20",
     "react": "^18",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18",
     "react-responsive-masonry": "^2.6.0",
     "react-slick": "^0.30.2",
     "sass": "^1.82.0",
+    "simple-react-validator": "^1.6.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.15"
   },
