--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.2.0",
     "next": "14.2.20",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-responsive-masonry": "^2.6.0",
     "react-slick": "^0.30.2",
+    "reactstrap": "^9.2.3",
     "sass": "^1.82.0",
     "simple-react-validator": "^1.6.2",
     "slick-carousel": "^1.8.1",
