--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@nextui-org/system": "^2.4.6",
     "@nextui-org/table": "^2.2.8",
     "@nextui-org/theme": "^2.4.5",
+    "@supabase-cache-helpers/postgrest-react-query": "^1.11.4",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.13",
+    "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-query-devtools": "^5.64.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.17.0",
-    "moment": "^2.30.1",
     "next": "14.2.20",
     "react": "^18.3.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-responsive-masonry": "^2.6.0",
     "react-slick": "^0.30.2",
     "reactstrap": "^9.2.3",
